[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/GameData.gd" type="Script" id=1]

[node name="GameData" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -460.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 34.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 34.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 680.0
margin_bottom = 14.0
custom_constants/separation = 10

[node name="StateLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 41.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "STATE:"
align = 1
valign = 1

[node name="StateInfo" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 51.0
margin_right = 83.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "state"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 93.0
margin_right = 97.0
margin_bottom = 14.0

[node name="StaminaLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 107.0
margin_right = 170.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "STAMINA:"
align = 1
valign = 1

[node name="StaminaProgress" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 180.0
margin_right = 280.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 0 )
value = 75.0

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 290.0
margin_right = 294.0
margin_bottom = 14.0

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 304.0
margin_right = 358.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "HEALTH:"
align = 1
valign = 1

[node name="HealthInfo" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 368.0
margin_right = 411.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Mouse"
align = 1
valign = 1
